--- a/style.css
+++ b/style.css
@@ -120,9 +120,10 @@ body {
 }
 
 nav {
-    position: fixed;
+    position:sticky;
     top: 0;
     width: 100%;
+    background-color: #fff;
 }
 
 .navbar-container {
@@ -153,6 +154,13 @@ nav {
     .responsive-menu {
         display: flex !important;
     }
+    .hero{
+        padding: 0 !important;
+    }
+    .hero img{
+        height: auto !important;
+        object-fit: fill !important;
+    }
 }
 
 .responsive-menu {
@@ -182,20 +190,12 @@ img {
 
 /* hero section */
 
-.hero {
-    width: 100%;
-    height: 80vh;
+.hero{
+    padding: 0 100px;
 }
 
-.hero img {
-    object-fit: cover;
-    height: 98vh;
-}
-
-@media (max-width:400px) {
-    .hero img{
-        height: 50vh;
-    }
+.hero img{
+    height: 650px;
 }
 
 /* hero section */
